2021-03-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk: Fix method `value' for both LEB128 and
	ULEB128.

2021-03-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-mi-json.c (pk_mi_json_object_to_msg): Small
	factorization.

2021-03-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-mi-msg.def: New file.
	* poke/pk-mi-msg.c: Rewrite based on pk-mi-msg.def.
	* poke/pk-mi-msg.h: Likewise.
	* poke/pk-mi-json.c: Likewise.
	* poke/Makefile.am (poke_SOURCES): Add pk-mi-msg.def.
	* testsuite/poke.mi-json/Makefile.am (mi_json_SOURCES): Add
	common/pk-utils.c.
	(mi_json_CPPFLAGS): Add common/.

2021-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 1.1.
	* doc/gendocs_template: Likewise.

2021-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Update for 1.1.

2021-03-19  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/Makefile.am (dist_lisp_DATA): Avoid byte-compiling emacs
	modes.

2021-03-17  Kostas Chasialis <sdi1600195@di.uoa.gr>

	* doc/gen-pvm-insns.sh: A more portable version of the script.
	* cfg.mk (sc_tests_listed_in_makefile_am): Now correctly finds
	tests on srcdir builds.

2021-03-17  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_open): Create files with
	adequate flags.

2021-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.h: Rename pk_open_ios to pk_open_file.
	* poke/pk-ios.c (pk_open_file): Likewise.
	(pk_open_file): Pass set_cur_p to pk_ios_open.
	* poke/pk-cmd-ios.c (pk_cmd_file): Reflect rename.
	* poke/poke.c (parse_args_2): Use pk_ios_open instead of
	pk_open_file.

2021-03-16  Thomas Weißschuh <thomas@t-8ch.de>

	* etc/Makefile.am: Distribute Emacs syntax highlighting.

2021-03-16  Thomas Weißschuh <thomas@t-8ch.de>

	* etc/vim/Makefile.am: Distribute vim syntax highlighting.

2021-03-15  Egeyar Bagcioglu  <egeyar@gmail.com>

	* .gitignore: Add /build /gl-libutils /doc/poke.text and tags

2021-03-15  Egeyar Bagcioglu  <egeyar@gmail.com>
